# text-processor

./: .gitignore  Cargo.toml  LICENSE  README-zh.md  README.md  TODO.md  config
input/: 1.srt
src/: file_ops.rs  main.rs
