[package]
name = "tp"
version = "0.1.1"
edition = "2021"
description = "A flexible and efficient solution for handling and transforming text files."

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
thiserror = "1.0"

[[bin]]
name = "tp"

[package.metadata.bundle]
name = "tp"
identifier = "com.sunny-117.tp"
version = "0.1.1"
short_description = "A flexible and efficient solution for handling and transforming text files."
long_description = """TextProcessor is a Rust project designed to process various text files. The project aims to provide a flexible and efficient solution for handling and transforming text files.."""

[package.metadata.bundle.osx]
frameworks = ["Cocoa", "Carbon"]

# [package.metadata.bundle.resources]
# Specify any additional resources to include in the bundle
